--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="nav_data_title">Import/Export data</string>
     <string name="nav_about_title">About</string>
     <string name="nav_exit_title">Exit</string>
+    <string name="menu_button_description">Menu</string>
+    <string name="search_query_hint">Search maps</string>
 </resources>
