--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="nav_exit_title">Exit</string>
     <string name="menu_button_description">Menu</string>
     <string name="search_query_hint">Search maps</string>
+    <string name="exit_dialog_text">Do you really want to exit?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
