add about activity

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="exit_dialog_text">Do you really want to exit?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="about_activity_title">About</string>
+
+    <string name="info_text"><![CDATA[<b>Тут</b> должна быть какая-то информация]]></string>
 </resources>
