--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="nav_header_title">The best routing app</string>
     <string name="nav_available_area_title">Available area</string>
     <string name="nav_data_title">Import/Export data</string>
+    <string name="nav_settings_title">Settings</string>
     <string name="nav_about_title">About</string>
     <string name="nav_exit_title">Exit</string>
     <string name="menu_button_description">Menu</string>
@@ -13,10 +14,13 @@
     <string name="no">No</string>
     <string name="about_activity_title">About</string>
     <string name="data_activity_title">Import/Export data</string>
+    <string name="settings_activity_title">Settings</string>
 
 
     <string name="info_text"><![CDATA[<b>Тут</b> должна быть какая-то информация]]></string>
     <string name="backup_button_text">Backup</string>
     <string name="restore_button_text">Restore from backup</string>
     <string name="import_button_text">Import selected area</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="server_url_label">Server URL</string>
 </resources>
