more routing info

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="routes_button_text">Routes</string>
     <string name="left_route_label_text">Without left</string>
     <string name="right_route_label_text">Normal</string>
+    <string name="not_found">Not found</string>
 
     <string name="distance_in_m">%1$dm</string>
     <string name="distance_in_km">%1$skm</string>
